--- a/Scripts/Initial_Analysis.Rmd
+++ b/Scripts/Initial_Analysis.Rmd
@@ -1266,7 +1266,10 @@ Taxon_List <- gsub("_.*","",Taxon_List)
 Paths <- paste(my_path("R",extra_path = "Emergence_yr"),Taxon_List,"_emergence.txt",sep="")
 
 # Load all sp in noe table
-Eme_Res <- bind_rows(lapply(Paths, fread))
+Eme_Res <- bind_rows(lapply(Paths, fread)) %>% 
+  filter(
+    n_ens == 10
+  )
 # warnings() for empty data species
 
 # View(Eme_Res)
@@ -1304,10 +1307,6 @@ eez_centroid <- read_csv(paste(data_path,"Spatial/eez_centroids.csv", sep = ""))
 
 # Per Stock
 stock_d_hist <- Eme_Res %>% 
-  filter(
-    n_ens == 10,
-    emerging_yr >= 2020
-  ) %>% 
   group_by(emerging_yr,taxon_key) %>%
   # summarise(n_tax = length(unique(eez_name))) %>%
   summarise(n()) %>% 
@@ -1326,10 +1325,6 @@ stock_d_hist <- Eme_Res %>%
 
 # Per EEZs
 eez_d_hist <- Eme_Res %>% 
-  filter(
-    n_ens == 10,
-    emerging_yr >= 2020
-  ) %>% 
   group_by(emerging_yr,eez_name) %>% 
   # summarise(n_tax = length(unique(taxon_key))) %>% 
   summarise(n()) %>% 
@@ -1370,6 +1365,94 @@ ggplot() +
     my_ggtheme_p() +
     scale_fill_viridis(discrete = T)
 
+```
+
+##### Time Lapse plot
+
+```{r Time_lapse_plot,  eval = T, echo = T}
+
+# Per Stock
+stock_d <-  Eme_Res %>% 
+  left_join(Neighbours) %>% 
+    distinct(taxon_key,neighbour_id, .keep_all = TRUE) %>% 
+    group_by(taxon_key) %>% 
+    summarise(
+      taxon_emer = min(emerging_yr)
+    ) %>% 
+    group_by(taxon_emer) %>% 
+  summarise(
+    n_tax = n()
+  ) %>% 
+  mutate(
+    com_sum = cumsum(n_tax),
+    level = "Stock"
+  ) %>% 
+    select(1,3,4)
+
+  #  EEZ data
+eez_d <-  Eme_Res %>% 
+  left_join(Neighbours) %>% 
+  filter(n_ens == 10) %>% 
+    distinct(eez_name,neighbour_id, .keep_all = TRUE) %>% 
+    group_by(eez_name) %>% 
+    summarise(
+      taxon_emer = min(emerging_yr)
+    ) %>% 
+    group_by(taxon_emer) %>% 
+  summarise(
+    n_tax = n()
+  ) %>% 
+  mutate(
+    com_sum = cumsum(n_tax),
+    level = "EEZ"
+  ) %>% 
+    select(1,3,4)
+  
+# Plot Data
+plot_data <- stock_d %>% 
+  bind_rows(eez_d)
+
+  # filter(emerging_yr >= 2020) %>% 
+  ggplot() +
+    geom_area(data = subset(plot_data, level == "Stock"),
+              aes(
+                x = as.numeric(taxon_emer),
+                y = com_sum,
+                fill = level
+              ),
+              alpha= 0.8,
+              size=0.5,
+              colour="black"
+    )  +
+    geom_area(data = subset(plot_data, level == "EEZ"),
+              aes(
+                x = taxon_emer,
+                y = com_sum,
+                fill = level
+              ),
+              alpha= 0.8,
+              size=0.5,
+              colour="black"
+    ) +
+    # Comment out for option A (Change plot name!!)
+    geom_hline(yintercept = length(unique(Eme_Res$eez_name)), color = "grey",linetype = "dashed") +
+  geom_text(aes(label="Total number of EEZs", x = 2010, y = length(unique(Eme_Res$eez_name))+10), color = "grey70",size =3) +
+    geom_hline(yintercept = length(unique(Eme_Res$taxon_key)), color = "grey",linetype = "dashed") +
+  geom_text(aes(label="Total number of Taxa", x = 2010, y = length(unique(Eme_Res$taxon_key))+10), color = "grey70",size =3) +
+    scale_y_continuous("Cumulatuve Curve",
+                       breaks = seq(0,500,50),
+                       limits = c(0,500)
+    ) +
+    scale_x_continuous("Year of emergence",
+                       breaks = seq(2000,2100,10)
+    ) +
+    my_ggtheme_p() +
+    scale_fill_viridis(discrete = T) +
+  ggsave("./Figures/figure_accumulative_curve_B.png",
+         width = 6,
+         height = 6,
+         units = "in"
+  )
 ```
 
 ##### Scatter plots
@@ -1473,7 +1556,7 @@ getEnvVar=function(yr,ModelRCP,RCP,Variable){
   getTemp <- Bottom_Data 
 }
 
-Years <-seq(,2100,1)
+Years <-seq(1951,2100,1)
 
 for(y in 1:length(Years)){
         Data <- getEnvVar(yr = Years[y],
@@ -1485,7 +1568,7 @@ for(y in 1:length(Years)){
         if(y == 1){
           
           F_BData <- Data[1]
-          colnames(F_BData) <- 2020
+          colnames(F_BData) <- Years[1]
       
         }else{
           
@@ -1509,20 +1592,57 @@ F_BData <- F_BData %>%
 ```
 
 
-
 ```{r temp_plot, eval = T, echo = T}
 
-sst_data <- my_path("D",T,"Climate","SST_data.csv",read = T) 
+### NEED TO RUN TIME LAPSE CHUNK FIRST TO GET ACCUMULATIVE DATA
 
-ggplot(F_BData) +
+# Get sst_data
+sst_data <- my_path("D",T,"Climate","SST_data.csv",read = T)
+
+sst_hist <- sst_data %>% 
+  filter(year < 2000) %>% 
+  group_by() %>% 
+  summarise(hist_sst =mean(mean_temp)) %>% 
+  pull()
+
+sst_change <- sst_data %>%
+  filter(year > 2020) %>% 
+  mutate(chng = round(mean_temp-sst_hist,2))
+
+
+  
+  # Plot Data
+stock_d %>% 
+  bind_rows(eez_d) %>% 
+  filter(taxon_emer >= 2020) %>% 
+  rename(year = taxon_emer) %>% 
+  left_join(sst_change) %>% 
+  ggplot() +
   geom_line(
     aes(
-      x = as.numeric(year),
-      y = mean_temp
+      x = chng,
+      y = com_sum,
+      colour = level
     )
+  ) +
+  geom_hline(yintercept = length(unique(Eme_Res$eez_name)), color = "grey",linetype = "dashed") +
+  geom_text(aes(label="Total number of EEZs", x = 0.5, y = length(unique(Eme_Res$eez_name))+10), color = "grey70",size =3) +
+    scale_y_continuous("Cumulatuve Curve",
+                       breaks = seq(0,450,50),
+                       limits = c(0,500)
+    ) +
+    scale_x_continuous("Change in SST (C)",
+                       breaks = seq(0,2,0.2),
+                       limits = c(0.3,2.3)
+    ) +
+    my_ggtheme_p() +
+    scale_colour_viridis(discrete = T) +
+  ggsave("./Figures/figure_temp.png",
+         width = 6,
+         height = 6,
+         units = "in"
   )
-
-
+  
 ```
 
 
@@ -1559,13 +1679,15 @@ data_eez <- Eme_Res %>%
 data %>% 
   left_join(data_eez,
             by = "emerging_yr") %>% 
+  rename(year = emerging_yr) %>% 
+  left_join(sst_data) %>% 
   ggplot() +
   geom_point(
     aes(
-      x = emerging_eez,
-      y = emerging_tax,
-      fill = emerging_yr,
-      colour = emerging_yr
+      x = mean_temp,
+      y = emerging_eez,
+      fill = year,
+      colour = year
     )
   )
   
