--- a/Scripts/Manuscript.Rmd
+++ b/Scripts/Manuscript.Rmd
@@ -88,7 +88,7 @@ The delineation of Economic Exclusive Zones (EEZs) by the United Nations Convent
 
 We projected the distribution of marine species using a dynamic bioclimatic envelope model (hearafter called DBEM). The DBEM algorythm includes species physiology, habitat suitabillity, depth and latitudinal ranges, and spatial population dynamics as well as preferences to sea temperature, salinity, oxygen content, sea ice extent (for polar species) and bathymetry. For pelagic species, the model uses environmental variables at the surface (e.g. sea surface temperature) whereas demersal species distribution are driven by ocean-bottom variables (e.g. bottom temperature). This way, the model estimates species abundance and maximum catch potential (a proxy of maximum sustainable yield) over a $0.5^{\circ}$ x $0.5^{\circ}$ grid of the world (See [-@Cheung:2010dt; -@Cheung:2016jd] for model details).
 
-We coupled the DBEM with the Geophysical Fluid Dynamics Laboratory Earth system model (GFDL-ESM2M) to project species distribution from 1951 to 2100 under climate change [@Dunne:2012bo; @Dunne:2013db]. We run the DBEM simulating biomass and MCP from 1950 to 2100 under a “worst-case” climate change scenario accroding to the Representative Concentration Pathway 8.5 (RCP 8.5) used by the Intergovernmental Panel on Climate Change (IPCC) [@IPCC:2014bz; Riahi:2011dk]. According to the GFDL-ESM2M, under the RCP 8.5 scenario atmospheric temperature will increase by $3.2^{\circ}C$ by 2081-2100, relative to preindustrial levels. Because the main approach of this paper relies on understanding the spatial and temporal variation of a species distribution, we have to understand both the historical as well as the future climate-driven distribution variabillity, in order to infer the differences. We do this by following an ensemble member approach where each member constitutes a different initial Earth system condition [@Roggers:2015jq; @Frolicher:2009ge]. Thus, for our experiment, in each of the ten GFDL-ESM2M-ensambles the Earth system initial condition is infinitesimally different resulting in an unique atmosphere and ocean state at each point in time. This results in a different state of internal variability for each ensamble representing a plausible future under RCP 8.5 [@Roggers:2015jq]. Following this approach allows us to estimate a secular trend for the natural variabillity (e.g. backround noise). At the same time, by having multiple initial-condition ensemble simulations of the GFDL-ESM2M we were able to remove the natural variability of a stock's distributio by averaging the secular trend over all ensemble members [@Roggers:2015jq]. 
+We coupled the DBEM with the Geophysical Fluid Dynamics Laboratory Earth system model (GFDL-ESM2M) to project species distribution from 1951 to 2100 under climate change [@Dunne:2012bo; @Dunne:2013db]. We run the DBEM simulating biomass and MCP from 1950 to 2100 under a “worst-case” climate change scenario accroding to the Representative Concentration Pathway 8.5 (RCP 8.5) used by the Intergovernmental Panel on Climate Change (IPCC) [@IPCC:2014bz; Riahi:2011dk]. According to the GFDL-ESM2M, under the RCP 8.5 scenario atmospheric temperature will increase by $3.2^{\circ}C$ by 2081-2100, relative to preindustrial levels. Because the main approach of this paper relies on understanding the spatial and temporal variation of a species distribution, we have to understand both the historical as well as the future climate-driven distribution variabillity, in order to infer the differences. We do this by following an ensemble member approach where each member constitutes a different initial Earth system condition [@Rodggers:2015jq; @Frolicher:2009ge]. Thus, for our experiment, in each of the ten GFDL-ESM2M-ensambles the Earth system initial condition is infinitesimally different resulting in an unique atmosphere and ocean state at each point in time. This results in a different state of internal variability for each ensamble representing a plausible future under RCP 8.5 [@Rodggers:2015jq]. Following this approach allows us to estimate a secular trend for the natural variabillity (e.g. backround noise). At the same time, by having multiple initial-condition ensemble simulations of the GFDL-ESM2M we were able to remove the natural variability of a stock's distributio by averaging the secular trend over all ensemble members [@Rodggers:2015jq]. 
 
 ## Data analysis
 
@@ -100,34 +100,42 @@ In game theory, a threat point is known as the minimum payoff that a player is w
 
 ### Time of Emergence Index
 
-Knowing the time (e.g. year) in whitch SSR is going to diverge from a historical variablillty can be key for policy to prepare to such change. In here we call this event time of emergence and defined it as the moment in time when the future variation in SSR becomes larger than the historical trend variabillity [@Roggers:2015jq]. We emplot the ten GFDL ensable members described above, and developed an index of transboundary range shift, fisheries and climate change (*I*). The index is based on the variation of a species distribution centroid in realtion to the EEZs it ocuppys as follows:
+Knowing the time (e.g. year) in whitch SSR is going to diverge from a historical variablillty can be key for policy to prepare to such change. In here we call this event time of emergence and defined it as the moment in time when the future variation in SSR becomes larger than the historical trend variabillity [@Roggers:2015jq]. We emplot the ten GFDL ensable members described above, and developed an index of transboundary range shift, fisheries and climate change (*TI*). The index is based on the variation of a species distribution centroid in realtion to the centroid of the neighbouring EEZs it ocuppys. We define the species centroid as the gridcell within neighbouring EEZs with the highest abundance in each year. First, for each ensamble member, neighbouring EEZ and species, we computed the distance between centroids assuming a perfect sphere and ignoring elevation differences:
 
-$$I =(\frac{D_{A,y}}{sd(D_{A,h})} - \frac{D_{B,y}}{sd(D_{B,h)}})^2$$
+$$D_{ens} = acos(sin(lat_{eez})*sin(lat_{spp}) + cos(lat_{eez})*cos(lat_{spp})*cos(lon_{eez}-lon_{spp}))$$
+where $lat_{eez}$ and $lat_{spp}$ are the latitudes of the EEZ and specie centroid, respectiveley and $lon_{eez}$ and $lon_{spp}$ are the respectevly longitudes.
 
-where $D_A$ and $D_B$ represent the mean (among ensamble members) distribution centroid of a species in EEZs A and B, respectiveley for each future time step from 2006 to 2100 (*t*) and *sd* is the standar deviation of the historical (*h*, 1951 - 2005) centroid distribution for $D_A$ and $D_B$.
+Then, for each year we calculated the transboundary index as follows:
+
+$$TI =(\frac{D_{A,t}}{sd(D_{A,h})} - \frac{D_{B,t}}{sd(D_{B,h)}})^2$$
+
+where $D_A$ and $D_B$ represent the distance between EEZ and distribution centroids of a species in EEZs A and B, respectiveley for each future time step from 2006 to 2100 (*t*); *sd* is the standar deviation of the historical (*h*, 1951 - 2005) centroid distribution for $D_A$ and $D_B$. The index was then smoothed to a 10 years average. Finally, to determine the time of emergence we estimated a signal to noise ratio (SNR) and set an arbritary treshold as follows [@Rodggers:2015jq]:
+
+$$SNR = TREND/NOISE$$
+
+where *TREND* is the yearly mean *TI* ($\mu$) of all ten ensemble members and *NOISE* is the standar deviation of the TREND ($\sigma$) between 1951 and 2005. Note that in some cases not all ensemble members show the presence of a species in a certain EEZ. We presented the results only for those cases wher all 10 ensemble members had results. We determine a $\mu \pm \sigma$ (confidence interval of 68%) to show the first year when the "signal" of the transboundary index overpasses the historic "noise". Since this was an arbritary decission, we have included a more conservative estimation ($\mu \pm 2*\sigma$ for a 95% confidence interval).
+
+
+
 
 <!-- In cases where the species is distributed in more than 2 neighbouring EEZs (e.g. *xxx*), the index is as follows: -->
 
 <!-- $$I =(\frac{D_{A,y}}{sd(D_{A,h})} - \frac{D_{B,y}}{sd(D_{B,h})}) |  \\  +(\frac{D_{A,y}}{sd(D_{A,h})} - \frac{D_{C,y}}{sd(D_{B,h})}) | \\  +(\frac{D_{A,y}}{sd(D_{A,h})} - \frac{D_{Cy}}{sd(D_{B,h})})/N$$ -->
 
 
-This way, for two neighbouring EEZs sharing a stock, if the centroid shifts towards EEZ A ($D_A$ decreases) but away from EEZ A B ($D_B$ increases), EEZ A may catch a bigger share over B and the risk of dispute increases. Consequently, if the centroid shifts are within historical variability, risk of dispute between EEZ A and B is lower, finally, if the centroid shifts are beyond historical variability, the risk of dispute is higher. Thus, risk is positively related to the frequency of centroid shifts beyond historical variability (Fig. 1). 
+In other words, for two neighbouring EEZs sharing a stock, if the centroid shifts towards EEZ A ($D_A$ decreases) but away from EEZ A B ($D_B$ increases), EEZ A may catch a bigger share over B and the risk of dispute increases (see *TI* equation). Consequently, if the centroid shifts are within historical variability (*SNR* < 1), risk of dispute between EEZ A and B is lower, finally, if the centroid shifts are beyond historical variability (*SNR* > 1), the risk of dispute is higher. Thus, risk is positively related to the frequency of centroid shifts beyond historical variability (Fig. 1). 
 
 ![Fig 1. Theorical representation of transboundary Index. (A) Case with two neighbouring EEZs. (B) Case with three neigbouring EEZs. Grey dotted boxes represent each EEZ boundaries, t1 and t2 represent time periods one and two, respectiveley, and green and red lines represent an increase and decrease in D, respectiveley](~/GitHub/TransEmergence/Figures/Fig1.png)
 
-All analyses were run using the statistical software *R version 3.5.2 (2018-12-20; Eggshell Igloo)* with the packages *data.table* [@Packagedatatable:2019uh], *janitor* [@PackagejanitorSim:2018ur], *wesanderson* [@Packagewesanderson:2018vn], *rfishbase* [@PackagerfishbaseR:2019th], *R.matlab* [@PackageRmatlabRe:2018un], *sf* [@PackagesfSimpleF:2018vp], *sp* [@PackagespClasses:2019tn], *tidiverse* [@PackagetidyverseE:2017vq], *tidytext* [@PackagetidytextTe:2019vk], and *zoo* [@PackagezooSInfr:2019tm]. All code is available at https://github.com/jepa/TransEmergence
+All analyses were run using the statistical software *R version 3.5.2 (2018-12-20; Eggshell Igloo)* with the packages *data.table* [@Packagedatatable:2019uh], *janitor* [@PackagejanitorSim:2018ur], *wesanderson* [@Packagewesanderson:2018vn], *rfishbase* [@PackagerfishbaseR:2019th], *R.matlab* [@PackageRmatlabRe:2018un], *sf* [@PackagesfSimpleF:2018vp], *sp* [@PackagespClasses:2019tn], *tidiverse* [@PackagetidyverseE:2017vq], *tidytext* [@PackagetidytextTe:2019vk], *gmt* [@gmt] and *zoo* [@PackagezooSInfr:2019tm]. All code is available at https://github.com/jepa/TransEmergence
+
 
 # Results
 
 ```{r Load_Results, eval = TRUE,  echo = FALSE, include = FALSE}
 
-prop_path <- "/Volumes/HALL2000/Data/TransEmergence/Results/Proportion_2005/"
-prop_names  <- list.files(prop_path)
-
-prop_read <- paste(prop_path,prop_names,sep="")
-
-results <- bind_rows(lapply(prop_read, data.table::fread))
-
+prop_r <- read_csv("/Volumes/HALL2000/Data/TransEmergence/Results/proportion_change_2005.csv") %>% 
+  gather("time_step","change",per_early,per_mid)
 
 ```
   
@@ -136,36 +144,34 @@ results <- bind_rows(lapply(prop_read, data.table::fread))
 
 ```{r Load_Results, eval = TRUE,  echo = FALSE, include = FALSE}
 
-# Mid century
+# Early century
 n_eez <- prop_r %>%
-  filter(variable == "mean_spp" & 
-           !is.na(per_mid)
+  filter(variable == "mean_eez" & 
+           !is.na(change),
+         time_step == "per_early"
          ) %>% 
   pull(eez_name) %>% 
   unique() %>% 
   length()
 
-n_eez_per <- n_eez/275*100
+n_eez_per <- round(n_eez/275*100,2)
 
 
-### Max values
-max_mid <- prop_r %>% 
-  filter(variable == "max_spp" & 
-           !is.na(per_mid)
+### Max values early
+max_values <- prop_r %>% 
+  filter(variable == "max_eez" & 
+           !is.na(change),
+         # time_step == "per_early"
          )
 
 ### Average
 average_mid <- prop_r %>% 
-  filter(variable == "mean_spp" & 
-           !is.na(per_mid)
-         ) %>% 
-  pull(per_mid) %>% 
-  mean()
-
-
+  filter(variable == "mean_eez" & 
+           !is.na(change)
+         ) 
 ```
 
-Our results suggest that `r n_eez_per`% (n = `r n_eez`) of the world EEZs will see a change in SSR by mid $21^{st}$ century (Fig. 1). The change in SSR will range from gains of over 100% (e.g. Honduras' SSR of *species* shared with Mexico is projected to go from 28% to 60%) to loses of up to -80% of SSR (e.g. Nauru' SSR of *species* shared with the Marshall Isl. is projected to decline from 14% to 3%). By the end of the century, SSR changes will be more exrteme with 13 countries gaining over 100% SSR and Palau loosing -93.61% of the SSR of *spp* to the	Philippines (from 20% to 1.2%).
+Our results suggest that `r n_eez_per`% (n = `r n_eez`) of the world EEZs will see a change in SSR by early $21^{st}$ century (Fig. 1). The change in SSR will range from gains of over 100% of a sertain shared stock (e.g. Guatemala' SSR of *species* shared with Mexico is projected to go from 12% to 26%) to loses of up to -71% of SSR (e.g. Honduras SSR of *species* shared with the Nicaragua in the Pacific coast is projected to decline from 50% to 14%). Despite no substantial changes in SSR per EEZ can be seen by the mid $21^st$ century (**Supplements Fig 1 (map)**), changes in SSR are expected to increase in intensity (**Supplements Fig 2 (histogram)**).
 
 ```{r SSR_gain, eval = F,  echo = F, fig.width=9, fig.height=12, fig.cap =  "Average transboundary species SSR gain of neighbouring EEZs by 2030 (2021-2040) relative to 1951-2005 under RCP 8.5. Arrows go from the loosing EEZ (point) to the winner (arrowhead)"}
 
@@ -173,7 +179,6 @@ img <- readPNG("../Figures/figure_connections_n50.png")
 grid.raster(img)
 
 ```
-
 
 ![Average transboundary species SSR gain of neighbouring EEZs by 2030 (2021-2040) relative to 1951-2005 under RCP 8.5. Arrows go from the loosing EEZ (point) to the winner (arrowhead)](../Figures/figure_connections_n50.png)
 
